--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@ layout: default
 
     <p>My professional interests lie in the field of web development, usability and programming. I enjoy designing and implementing new interfaces and apps.</p>
 
-    <p>If you are interested to work with please check out my profiles <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
+    <p>If you are interested in working with me please check out my profiles on <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
+
+    <p>Here is what I am doing <a href="{{ site.github.url }}/now">now</a></p>
   </div>
 </div>
 
