--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 
     <p>St.Petersburg native. I now live in Hamburg, Germany.</p>
 
-    <p>My professional interests lie in the field of web development, usability and programming. I enjoy designing and implementing new interfaces and apps.</p>
+    <p>My professional interests lie in the field of web development, usability and programming.</p>
 
     <p>If you are interested in working with me please check out my profiles on <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
 
