update: gemfile.lock, check the status

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 
     <p>If you are interested in working with me please check out my profiles on <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
 
-    <p>Here is what I am doing <a href="{{ site.github.url }}/now">now</a></p>
+    <p>Here is what I am doing <a href="{{ site.github.url }}/now">now</a>.</p>
   </div>
 
   <div id="instafeed"></div>
