--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: default
 
 <div class="about">
   <div class="about__content">
-    <p>Moin, I am Alla Lipina.</p>
+    <p>Moin, I am Alla.</p>
 
-    <p>St.Petersburg native. I now live in Hamburg, Germany.</p>
+    <p>Born in Russia, educated in St.Petersburg. Living most time of the year in Hamburg, Germany.</p>
 
     <p>My professional interests lie in the field of web development, usability and programming.</p>
 
