--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
   <div id="instafeed"></div>
 </div>
 
-<!-- <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
+<script type="text/javascript" src="assets/js/instafeed.min.js"></script>
 
 <script type="text/javascript">
     var feed = new Instafeed({
@@ -41,7 +41,7 @@ layout: default
         accessToken: '303603531.1677ed0.d8e536471a6646bd84dd3c68e030a105'
     });
     feed.run();
-</script> -->
+</script>
 
 <!-- <div class="blog">
     <h1>Blog Posts:</h1>
