--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@ layout: default
 
 <div class="about">
   <div class="about__content">
-    <p>Test!!!</p>
     <p>Moin, I am Alla.</p>
 
-    <p>Born in Russia, educated in St.Petersburg. Living most time of the year in Hamburg, Germany.</p>
+    <p>Born in Russia, educated in St.Petersburg. Living now in Hamburg, Germany.</p>
 
     <p>My professional interests lie in the field of web development, usability and programming.</p>
 
-    <p>If you are interested in working with me please check out my profiles on <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
+    <p>You can find my profiles on <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
 
     <p>Here is what I am doing <a href="{{ site.github.url }}/now">now</a>.</p>
   </div>
@@ -33,6 +32,7 @@ layout: default
   <div id="instafeed"></div>
 </div>
 
+<!-- widget for instagram ---
 <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
 
 <script type="text/javascript">
@@ -42,9 +42,11 @@ layout: default
         accessToken: '303603531.1677ed0.d8e536471a6646bd84dd3c68e030a105'
     });
     feed.run();
-</script>
+</script> 
+-->
 
-<!-- <div class="blog">
+<!-- here is the list of posts
+<div class="blog">
     <h1>Blog Posts:</h1>
     <ul>
         {% for post in site.posts %}
@@ -54,5 +56,4 @@ layout: default
         {% endfor %}
     </ul>
 </div>
-
  -->
