--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@ layout: default
 
 <div class="about">
   <div class="about__content">
-    <p>Moin, I am Alla.</p>
+    <p>Moin, you landed on my personal page. Welcome!</p>
 
-    <p>Born in Russia, educated in St.Petersburg. Living now in Hamburg, Germany.</p>
+    <p>I am Alla, a Software Developer living in Hamburg, Germany.</p>
 
-    <p>My professional interests lie in the field of web development, usability and programming.</p>
+    <p>My professional interests lie in the field of web development, usability and programming, so if you are interested to work with me, you can find my profiles on <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
+    
+    <p>Here is what I am occupied most of the time <a href="{{ site.github.url }}/now">now</a>.</p>
 
-    <p>You can find my profiles on <a href="{{site.account_linkedin}}" target="_blank">LinkedIn</a> / <a href="{{site.account_xing}}" target="_blank">Xing</a> or write me an email: <a href="mailto:{{site.email}}?Subject=Hi%20Alla" target="_top"">{{site.email}}</a></p>
-
-    <p>Here is what I am doing <a href="{{ site.github.url }}/now">now</a>.</p>
+    <p>Once in million years I write something <a href="{{ site.github.url }}/blog">here</a></p>
   </div>
 
   <div id="instafeed"></div>
